[package]
name = "template-exercisme-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.template_exercisme]
path = ".."

[[bin]]
name = "fuzz_play_game"
path = "fuzz_targets/fuzz_play_game.rs"
test = false
doc = false
bench = false
